fixing hero on smaller desktops

--- a/assets/css/components/_hero.scss
+++ b/assets/css/components/_hero.scss
@@ -4,20 +4,32 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 70%;
+    height: 90%;
     background: linear-gradient(to right, #93E100, #00A6FF);
     z-index: -1;
+    @media (min-height: 1000px) {
+        height: 80%;
+    }
+    @media (min-height: 1200px) {
+        height: 70%;
+    }
 }
 
 .hero::after {
     content: "";
     position: absolute;
-    top: 70%;
+    top: 90%;
     left: 0;
     width: 100%;
     height: 50%;
     background-color: #f5f5f7;
     z-index: -1;
+    @media (min-height: 1000px) {
+        top: 80%;
+    }
+    @media (min-height: 1200px) {
+        top: 70%;
+    }
 }
 
 .hero {
