--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11971,13 +11971,13 @@ textarea.form-control-lg {
 }
 
 .header-mobile {
-  display: none;
+  display: block;
 }
 
 .header-desktop {
   padding-left: 20px;
   padding-right: 20px;
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -12044,16 +12044,21 @@ textarea.form-control-lg {
   width: 125px;
 }
 .header-desktop .right .btn-link {
-  font-size: 18px;
+  font-size: 0px;
   font-weight: normal;
 }
+@media (min-width: 1950px) {
+  .header-desktop .right .btn-link {
+    font-size: 18px;
+  }
+}
 
-@media (max-width: 991.98px) {
+@media (min-width: 992px) {
   .header-mobile {
-    display: block;
+    display: none;
   }
   .header-desktop {
-    display: none;
+    display: flex;
   }
 }
 /* Ensure the header-desktop container is positioned relatively */
@@ -12387,20 +12392,40 @@ textarea.form-control-lg {
   top: 0;
   left: 0;
   width: 100%;
-  height: 70%;
+  height: 90%;
   background: linear-gradient(to right, #93E100, #00A6FF);
   z-index: -1;
+}
+@media (min-height: 1000px) {
+  .hero::before {
+    height: 80%;
+  }
+}
+@media (min-height: 1200px) {
+  .hero::before {
+    height: 70%;
+  }
 }
 
 .hero::after {
   content: "";
   position: absolute;
-  top: 70%;
+  top: 90%;
   left: 0;
   width: 100%;
   height: 50%;
   background-color: #f5f5f7;
   z-index: -1;
+}
+@media (min-height: 1000px) {
+  .hero::after {
+    top: 80%;
+  }
+}
+@media (min-height: 1200px) {
+  .hero::after {
+    top: 70%;
+  }
 }
 
 .hero {
